# vtkVTG

./: .gitignore  CMakeLists.txt  CMakeOptions.cmake  copyPVslabFiles.py  vtkvtgConfigure.h.in
Charts/: CMakeLists.txt  charts_diff.sh  vtkAxisImageItem.cxx  vtkAxisImageItem.h  vtkMyChartParallelCoordinates.cxx  vtkMyChartParallelCoordinates.h  vtkMyChartXY.cxx  vtkMyChartXY.h  vtkMyContextActor.cxx  vtkMyContextActor.h  vtkMyContextView.cxx  vtkMyContextView.h  vtkMyOpenGLContextDevice2D.cxx  vtkMyOpenGLContextDevice2D.h  vtkMyPlotParallelCoordinates.cxx  vtkMyPlotParallelCoordinates.h  vtkMyPlotPoints.cxx  vtkMyPlotPoints.h  vtkOldChartParallelCoordinates.cxx  vtkOldChartParallelCoordinates.h  vtkOldPlotParallelCoordinates.cxx  vtkOldPlotParallelCoordinates.h  vtkPCAxis.cxx  vtkPCAxis.h  vtkTooltipImageItem.cxx  vtkTooltipImageItem.h
Charts/Diffs/: ChartPC_56_cxx.diff  ChartPC_56_h.diff  ChartPC_git_cxx.diff  ChartPC_git_h.diff  ChartXY_56_cxx.diff  ChartXY_56_h.diff  ChartXY_git_cxx.diff  ChartXY_git_h.diff  II_56_cxx.diff  II_56_h.diff  II_git_cxx.diff  II_git_h.diff  PCChart.diff  PCPlot.diff  PlotPC_56_cxx.diff  PlotPC_56_h.diff  PlotPC_git_cxx.diff  PlotPC_git_h.diff  PlotPoints_56_cxx.diff  PlotPoints_56_h.diff  PlotPoints_git_cxx.diff  PlotPoints_git_h.diff
Common/: CMakeLists.txt  vtkSlab.cxx  vtkSlab.h  vtkvtgCommonWin32Header.h
Examples/: CMakeLists.txt
Examples/Cxx/GraphItem/: GraphItem.cxx  vtkGraphItem.cxx  vtkGraphItem.h
Examples/Python/: BezierSurfaceSource.py  ClipWithSlabWidget2.py  ConvertIds.py  FiberBezierSurfaces1.py  FiberBezierSurfaces2.py  QtSimpleView.ui  QtSimpleView3.py  QtSimpleView3.ui  QtWordleDebugView.py  QtWordleDebugView2.py  QtWordleDebugView3.py  QtWordleStack.py  QtWordleView.py  QtWordleView2.py  QtWordleView3.py  SingleFiberExtractStateTrace.py  TransformWithSlabWidget2.py  icicle_view_gw_rev3.py  test_data_structures.py  texicicle_view_gw_rev0.py  texicicle_view_gw_rev1.py  texicicle_view_gw_rev3.py  texicicle_view_gw_rev4.py
Filtering/: CMakeLists.txt  vtkBezierSurfaceSource.cxx  vtkBezierSurfaceSource.h  vtkMyPolyVertex.cxx  vtkMyPolyVertex.h
Filtering/X_OldVersions/: vtkMyPolyVertex.cxx  vtkMyPolyVertex.h
Graphics/: CMakeLists.txt  vtkMyClipDataSet.cxx  vtkMyClipDataSet.h  vtkMyGlyph3D.cxx  vtkMyGlyph3D.h
Hybrid/: CMakeLists.txt
Infovis/: CMakeLists.txt  vtkTexturedTreeMapToPolyData.cxx  vtkTexturedTreeMapToPolyData.h
Patches/: PVslabDiff_063009am  PVslabDiff_070209am  PVslabDiff_070809am  VTKdrawimage.diff
Qt/Components/: pq3DWidget.cxx  pqSlabWidget.cxx  pqSlabWidget.h
Qt/Components/Resources/UI/: pqSlabWidget.ui
QtGUI/: CMakeLists.txt  vtkQtWordleView.cxx  vtkQtWordleView.h  vtkvtgQVTKWin32Header.h
QtGUIdebug/: CMakeLists.txt  vtkQtWordleDebugView.cxx  vtkQtWordleDebugView.h  vtkvtgQVTKdebugWin32Header.h
Rendering/: CMakeLists.txt  vtkConvertIds.cxx  vtkConvertIds.h  vtkvtgRenderingWin32Header.h
Servers/ServerManager/: vtkSMSlabProxy.cxx  vtkSMSlabProxy.h  vtkSMSlabRepresentationProxy.cxx  vtkSMSlabRepresentationProxy.h
Servers/ServerManager/Resources/: filters.xml  rendering.xml  utilities.xml
Utilities/Doxygen/: CMakeLists.txt  doc_makeall.sh.in  doxyfile.in
Widgets/: CMakeLists.txt  vtkSlabRepresentation.cxx  vtkSlabRepresentation.h  vtkSlabWidget2.cxx  vtkSlabWidget2.h
Wrapping/Python/: CMakeLists.txt  PythonInstall.cmake.in  compile_all_vtk.py.in  setup.py.in
Wrapping/Python/vtkvtg/: __init__.py  charts.py  common.py  filtering.py  graphics.py  hybrid.py  infovis.py  qvtk.py  qvtkdebug.py  rendering.py  widgets.py
Wrapping/Tcl/: MakePackages.tcl
Wrapping/Tcl/vtkvtg/: pkgIndex.tcl  vtkvtg.tcl
Wrapping/Tcl/vtkvtgcommon/: pkgIndex.tcl  vtkvtgcommon.tcl
Wrapping/Tcl/vtkvtgimaging/: pkgIndex.tcl  vtkvtgimaging.tcl
Wrapping/Tcl/vtkvtgunsorted/: pkgIndex.tcl  vtkvtgunsorted.tcl
