PROJECT(VTKVTGExamples)
INCLUDE_REGULAR_EXPRESSION("^.*$")

# VTK examples now require CMake 2.4 or higher.
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.3)

IF(NOT VTK_BINARY_DIR)
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})
ENDIF(NOT VTK_BINARY_DIR)

# Most examples require rendering support.
IF(VTK_USE_RENDERING)
  IF(VTK_USE_INFOVIS)
    SUBDIRS(Cxx/GraphItem)
  ENDIF(VTK_USE_INFOVIS)
ENDIF(VTK_USE_RENDERING)
